alteracao no html

--- a/html.html
+++ b/html.html
@@ -23,7 +23,7 @@
                     if (err != null) {
                         alert('Something went wrong: ' + err);
                     } else {
-                        alert('Your query count: ' + data.query.count);
+                        alert('Your query count: ' + data);
                     }
                 });
         </script>
